--- a/src/main/resources/hu/petrik/morgovannimrod_javafxrestclientdolgozat/create-company-view.fxml
+++ b/src/main/resources/hu/petrik/morgovannimrod_javafxrestclientdolgozat/create-company-view.fxml
@@ -32,7 +32,7 @@
         <TextField fx:id="nameField" GridPane.columnIndex="1" />
         <TextField fx:id="PhoneField" GridPane.columnIndex="1" GridPane.rowIndex="1" />
         <Spinner fx:id="totalempolyeeField" prefWidth="2000" GridPane.columnIndex="1" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" />
-        <Button fx:id="submitButton" mnemonicParsing="false" prefWidth="Infinity" text="Submit" GridPane.columnSpan="2" GridPane.rowIndex="4" />
+        <Button fx:id="submitButton" onAction="#submitClick" mnemonicParsing="false" prefWidth="Infinity" text="Submit" GridPane.columnSpan="2" GridPane.rowIndex="4" />
       <TextField fx:id="creditcardField" GridPane.columnIndex="1" GridPane.rowIndex="3" />
     </children>
 </GridPane>
